@@ -1,4 +1,6 @@
 ver 0.21.21 (not yet released)
+* decoder
+  - gme: ignore empty tags
 
 ver 0.21.20 (2020/02/16)
 * decoder
